objects/Interview__c.object
<CustomObject>
    <label>Interview</label>
    <nameField>
        <label>Interview Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Face-to-face</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Interviews</relationshipLabel>
        <relationshipName>Interviews1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Strenghts__c</fullName>
        <label>Strenghts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weaknesses__c</fullName>
        <label>Weaknesses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_opinion__c</fullName>
        <label>Final opinion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_status__c</fullName>
        <label>Decision status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>KO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_1_of_disponibility__c</fullName>
        <label>Date 1 of disponibility</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_2_of_disponibility__c</fullName>
        <label>Date 2 of disponibility</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_3_of_disponibility__c</fullName>
        <label>Date 3 of disponibility</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Final_Date_of_disponibility__c</fullName>
        <label>Final Date of disponibility</label>
        <type>Date</type>
    </fields>
    <validationRules>
        <fullName>Date_small</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
Date_1_of_disponibility__c  &lt; NOW(),
Date_2_of_disponibility__c &lt; NOW(),
Date_3_of_disponibility__c &lt; NOW() 
)</errorConditionFormula>
        <errorMessage>Interview date must be after today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_different</fullName>
        <active>true</active>
        <errorConditionFormula>OR( 
   Date_1_of_disponibility__c == Date_2_of_disponibility__c ,
    Date_1_of_disponibility__c == Date_3_of_disponibility__c,
    Date_2_of_disponibility__c == Date_3_of_disponibility__c
)</errorConditionFormula>
        <errorMessage>Each date must be different from other</errorMessage>
    </validationRules>
</CustomObject>